bootstrap first project
https://bs4.kursbootstrap.pl/siatka-grid-wprowadzenie/

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <!-- Bootstrap CSS -->
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <link rel="stylesheet" href="css/cssCustom.css">
     </head>
     <body>
         <div class="container">
@@ -16,6 +17,9 @@
             <div class="row">
                 <div class="col-sm-12">
                     <h1>ciekawe</h1>
+                    <div class="blackDiv">
+                        <p>text czarnego diva</p>
+                    </div>
                 </div>
             </div>
             <div class="row">
@@ -25,9 +29,9 @@
                 <!-- Zdjęcia -->      
             </div>
         </div>
-            <div class="container-fluid">
-                <h1>Hello, world!</h1>
-                <div class="row">
+        <div class="container-fluid">
+            <h1>Hello, world!</h1>
+            <div class="row">
                 <!-- Tytuł -->
             </div>
             <div class="row">
@@ -36,7 +40,7 @@
             <div class="row">
                 <!-- Zdjęcia -->      
             </div>          
-            </div>
+        </div>
 
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
