--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="pl_PL">
     <head>
-        <title>Hello, world!</title>
+        <title>my Bootstrap Page</title>
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -15,7 +15,19 @@
         <div class="container">
             <h1>Hello, world!</h1>
             <div class="row">
-                <div class="col-sm-12">
+                <div class="col-sm-4">
+                    <h1>ciekawe</h1>
+                    <div class="blackDiv">
+                        <p>text czarnego diva</p>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <h1>ciekawe</h1>
+                    <div class="blackDiv">
+                        <p>text czarnego diva</p>
+                    </div>
+                </div>
+                <div class="col-sm-4">
                     <h1>ciekawe</h1>
                     <div class="blackDiv">
                         <p>text czarnego diva</p>
@@ -23,10 +35,46 @@
                 </div>
             </div>
             <div class="row">
-                <!-- Treść -->
+                <div class="col-sm-6">
+                    <h1>ciekawe</h1>
+                    <div class="blackDiv">
+                        <p>text czarnego diva</p>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <h1>ciekawe</h1>
+                    <div class="blackDiv">
+                        <p>text czarnego diva</p>
+                    </div>
+                </div>
             </div>
             <div class="row">
-                <!-- Zdjęcia -->      
+                <div class="col-sm-3">
+                    <h1>ciekawe</h1>
+                    <div class="blackDiv">
+                        <p>text czarnego diva</p>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <h1>ciekawe</h1>
+                    <div class="blackDiv">
+                        <p>text czarnego diva</p>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <h1>ciekawe</h1>
+                    <div class="blackDiv">
+                        <p>text czarnego diva</p>
+                    </div>
+                </div>      
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <h1>ciekawe</h1>
+                    <div class="blackDiv">
+                        <p>text czarnego diva</p>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="container-fluid">
