--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         <!-- Bootstrap CSS -->
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        
+        <!-- Custom CSS -->
         <link rel="stylesheet" href="css/cssCustom.css">
     </head>
     <body>
@@ -16,21 +18,21 @@
             <h1>Hello, world!</h1>
             <div class="row">
                 <div class="col-sm-4">
-                    <h1>ciekawe</h1>
+                    <h1>Lorem ipsum dolor sit amet.</h1>
                     <div class="blackDiv">
-                        <p>text czarnego diva</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi eaque ab labore, repellat, aliquid, soluta dolores quisquam consequatur unde explicabo omnis quia reprehenderit doloribus optio, quasi. Dolore quasi commodi obcaecati rerum, unde, aut quidem voluptatem distinctio voluptate maxime, deleniti dolores. Non architecto harum dolore error, esse dolorem tempora suscipit nulla voluptatibus ullam eligendi odit obcaecati incidunt consectetur illo nostrum cum!</p>
                     </div>
                 </div>
                 <div class="col-sm-4">
-                    <h1>ciekawe</h1>
+                    <h1>Lorem ipsum dolor sit.</h1>
                     <div class="blackDiv">
-                        <p>text czarnego diva</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt recusandae voluptatum, dignissimos vero iusto rem consequatur atque sint? Quod distinctio vero iure molestias quidem odio dolore nostrum dolor dolorum, et, error accusantium deleniti laudantium eum animi, voluptatibus, sunt dignissimos. Rem, commodi quo a provident harum dolor pariatur voluptates deserunt nesciunt numquam odit quidem eos accusantium amet obcaecati esse, ullam voluptatum maxime ipsam voluptatem in eum. Repellat voluptates molestias id ullam. Fuga ab cupiditate nulla eum placeat necessitatibus minus odio voluptatem.</p>
                     </div>
                 </div>
                 <div class="col-sm-4">
-                    <h1>ciekawe</h1>
+                    <h1>Lorem ipsum dolor.</h1>
                     <div class="blackDiv">
-                        <p>text czarnego diva</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt, eaque! Est reiciendis officia repellat, sunt, voluptate doloribus aperiam dolorem, tempora eligendi, praesentium necessitatibus ratione eum distinctio eius minima atque quas porro unde velit debitis perspiciatis? Possimus, iste? Tempora, atque deserunt error animi voluptatibus, voluptatem recusandae doloremque voluptas aliquid impedit officiis illum et quidem dolorum, repellat iusto totam qui architecto. Eos qui quos inventore officia culpa.</p>
                     </div>
                 </div>
             </div>
@@ -80,10 +82,134 @@
         <div class="container-fluid">
             <h1>Hello, world!</h1>
             <div class="row">
-                <!-- Tytuł -->
+                <div class="col-sm-12">
+                    <h1>col-sm-12</h1>
+                    <div class="blackDiv">
+                        <p>text czarnego diva</p>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <h1>col-sm-6</h1>
+                    <div class="blackDiv">
+                        <p>text czarnego diva</p>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <h1>col-sm-6</h1>
+                    <div class="blackDiv">
+                        <p>text czarnego diva</p>
+                    </div>
+                </div>
+                <div class="col-sm-2">
+                    <h1>col-sm-2</h1>
+                    <div class="blackDiv">
+                        <p>text czarnego diva</p>
+                    </div>
+                </div>
+                <div class="col-sm-2">
+                    <h1>col-sm-2</h1>
+                    <div class="blackDiv">
+                        <p>text czarnego diva</p>
+                    </div>
+                </div>
+                <div class="col-sm-2">
+                    <h1>col-sm-2</h1>
+                    <div class="blackDiv">
+                        <p>text czarnego diva</p>
+                    </div>
+                </div>
+                <div class="col-sm-2">
+                    <h1>col-sm-2</h1>
+                    <div class="blackDiv">
+                        <p>text czarnego diva</p>
+                    </div>
+                </div>
+                <div class="col-sm-2">
+                    <h1>col-sm-2</h1>
+                    <div class="blackDiv">
+                        <p>text czarnego diva</p>
+                    </div>
+                </div>
+                <div class="col-sm-2">
+                    <h1>col-sm-2</h1>
+                    <div class="blackDiv">
+                        <p>text czarnego diva</p>
+                    </div>
+                </div>
             </div>
             <div class="row">
-                <!-- Treść -->
+                <div class="col-sm-1">
+                    <h1>col-sm-1</h1>
+                    <div class="blackDiv">
+                        <p>text czarnego diva</p>
+                    </div>
+                </div>
+                <div class="col-sm-1">
+                    <h1>col-sm-1</h1>
+                    <div class="blackDiv">
+                        <p>text czarnego diva</p>
+                    </div>
+                </div>
+                <div class="col-sm-1">
+                    <h1>col-sm-1</h1>
+                    <div class="blackDiv">
+                        <p>text czarnego diva</p>
+                    </div>
+                </div>
+                <div class="col-sm-1">
+                    <h1>col-sm-1</h1>
+                    <div class="blackDiv">
+                        <p>text czarnego diva</p>
+                    </div>
+                </div>
+                <div class="col-sm-1">
+                    <h1>col-sm-1</h1>
+                    <div class="blackDiv">
+                        <p>text czarnego diva</p>
+                    </div>
+                </div>
+                <div class="col-sm-1">
+                    <h1>col-sm-1</h1>
+                    <div class="blackDiv">
+                        <p>text czarnego diva</p>
+                    </div>
+                </div>
+                <div class="col-sm-1">
+                    <h1>col-sm-1</h1>
+                    <div class="blackDiv">
+                        <p>text czarnego diva</p>
+                    </div>
+                </div>
+                <div class="col-sm-1">
+                    <h1>col-sm-1</h1>
+                    <div class="blackDiv">
+                        <p>text czarnego diva</p>
+                    </div>
+                </div>
+                <div class="col-sm-1">
+                    <h1>col-sm-1</h1>
+                    <div class="blackDiv">
+                        <p>text czarnego diva</p>
+                    </div>
+                </div>
+                <div class="col-sm-1">
+                    <h1>col-sm-1</h1>
+                    <div class="blackDiv">
+                        <p>text czarnego diva</p>
+                    </div>
+                </div>
+                <div class="col-sm-1">
+                    <h1>col-sm-1</h1>
+                    <div class="blackDiv">
+                        <p>text czarnego diva</p>
+                    </div>
+                </div>
+                <div class="col-sm-1">
+                    <h1>col-sm-1</h1>
+                    <div class="blackDiv">
+                        <p>text czarnego diva</p>
+                    </div>
+                </div>
             </div>
             <div class="row">
                 <!-- Zdjęcia -->      
