--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
                         <p>   d impedit officiis illum et quidem dolorum, repellat iusto totam qui architecto. Eos qui quos inventore officia culpa.</p>
                     </div>
                 </div>
-            </div>
             <div class="row">
                 <div class="col-sm-6">
                     <h1>ciekawe</h1>
@@ -138,79 +137,37 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-1">
-                    <h1>col-sm-1</h1>
-                    <div class="blackDiv">
-                        <p>   d impedit officiis illum et quidem dolorum, repellat iusto totam qui architecto. Eos qui quos inventore officia culpa.</p>
-                    </div>
-                </div>
-                <div class="col-sm-1">
-                    <h1>col-sm-1</h1>
-                    <div class="blackDiv">
-                        <p>   d impedit officiis illum et quidem dolorum, repellat iusto totam qui architecto. Eos qui quos inventore officia culpa.</p>
-                    </div>
-                </div>
-                <div class="col-sm-1">
-                    <h1>col-sm-1</h1>
-                    <div class="blackDiv">
-                        <p>   d impedit officiis illum et quidem dolorum, repellat iusto totam qui architecto. Eos qui quos inventore officia culpa.</p>
-                    </div>
-                </div>
-                <div class="col-sm-1">
-                    <h1>col-sm-1</h1>
-                    <div class="blackDiv">
-                        <p>   d impedit officiis illum et quidem dolorum, repellat iusto totam qui architecto. Eos qui quos inventore officia culpa.</p>
-                    </div>
-                </div>
-                <div class="col-sm-1">
-                    <h1>col-sm-1</h1>
-                    <div class="blackDiv">
-                        <p>   d impedit officiis illum et quidem dolorum, repellat iusto totam qui architecto. Eos qui quos inventore officia culpa.</p>
-                    </div>
-                </div>
-                <div class="col-sm-1">
-                    <h1>col-sm-1</h1>
-                    <div class="blackDiv">
-                        <p>   d impedit officiis illum et quidem dolorum, repellat iusto totam qui architecto. Eos qui quos inventore officia culpa.</p>
-                    </div>
-                </div>
-                <div class="col-sm-1">
-                    <h1>col-sm-1</h1>
-                    <div class="blackDiv">
-                        <p>   d impedit officiis illum et quidem dolorum, repellat iusto totam qui architecto. Eos qui quos inventore officia culpa.</p>
-                    </div>
-                </div>
-                <div class="col-sm-1">
-                    <h1>col-sm-1</h1>
-                    <div class="blackDiv">
-                        <p>   d impedit officiis illum et quidem dolorum, repellat iusto totam qui architecto. Eos qui quos inventore officia culpa.</p>
-                    </div>
-                </div>
-                <div class="col-sm-1">
-                    <h1>col-sm-1</h1>
-                    <div class="blackDiv">
-                        <p>   d impedit officiis illum et quidem dolorum, repellat iusto totam qui architecto. Eos qui quos inventore officia culpa.</p>
-                    </div>
-                </div>
-                <div class="col-sm-1">
-                    <h1>col-sm-1</h1>
-                    <div class="blackDiv">
-                        <p>   d impedit officiis illum et quidem dolorum, repellat iusto totam qui architecto. Eos qui quos inventore officia culpa.</p>
-                    </div>
-                </div>
-                <div class="col-sm-1">
-                    <h1>col-sm-1</h1>
-                    <div class="blackDiv">
-                        <p>   d impedit officiis illum et quidem dolorum, repellat iusto totam qui architecto. Eos qui quos inventore officia culpa.</p>
-                    </div>
-                </div>
-                <div class="col-sm-1">
-                    <h1>col-sm-1</h1>
-                    <div class="blackDiv">
-                        <p>   d impedit officiis illum et quidem dolorum, repellat iusto totam qui architecto. Eos qui quos inventore officia culpa.</p>
-                    </div>
-                </div>
+                <div class="col trialDiv">
+                    <p>gdzie to jest Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, repellendus, omnis? Minus molestias autem pariatur assumenda!</p>
+                </div>      
+                <div class="col trialDiv">
+                   <p>gdzie to jest Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, repellendus, omnis? Minus molestias autem pariatur assumenda!</p>     
+                </div>                
             </div>
+            <div class="row">
+                <div class="col trialDiv">
+                    <p>gdzie to jest Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, repellendus, omnis? Minus molestias autem pariatur assumenda!</p>
+                </div>      
+                <div class="col trialDiv">
+                   <p>gdzie to jest Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, repellendus, omnis? Minus molestias autem pariatur assumenda!</p>     
+                </div>                
+            </div>
+            <div class="row">
+                <div class="col trialDiv">
+                    trialDiv
+                </div>      
+                <div class="col trialDiv">
+                    trialDiv    
+                </div>
+                <div class="w-100"></div>
+                <div class="col trialDiv">
+                    trialDiv
+                </div>      
+                <div class="col trialDiv">
+                    trialDiv    
+                </div>                 
+            </div>
+            
             <div class="row">
                 <div class="col">
                     <p>Lorem ipsupisicing elit. Vitae natus impedit, accusantium illo accusamus minus!</p>
@@ -241,14 +198,15 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-10">
+                <div class="col-10  align-items-end">
                     <p>He named his car <i>The lightning</i>, because it was very fast.</p>
                 </div>
-                <div class="col">
+                <div class="col  align-items-end">
                     <p>He named his car <i>The lightning</i>, because it was very fast.</p>
                 </div>
             </div>          
         </div>
+            </div>
 
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
