--- a/index2.html
+++ b/index2.html
@@ -11,13 +11,13 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
         <!-- Custom CSS -->
-        <link rel="stylesheet" href="css/cssCustom.css">
+        <link rel="stylesheet" href="/css/cssCustom2.css">
         
     </head>
     <body>
-       <div class="licznik" id="counter1">1</div>
+       <div class="licznik">2</div>
         <div class="container">
-            <div class="row justify-content-around">
+            <div class="row ">
                 <div class="col-sm-4 align-items-end">
                     <h1>Lorem ipsum dolor sit amet.</h1>
                     <div class="blackDiv">
@@ -29,31 +29,17 @@
                     <div class="blackDiv">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt recusandae voluptatum, dignissimos vero iusto rem consequatur atque sint? Quod distinctio vero iure molestias quidem odio dolore nostrum dolor dolorum, et, error accusantium deleniti laudantium eum animi, voluptatibus, sunt dignissimos. Rem, commodi quo a provident harum dolor pariatur voluptates deserunt nesciunt numquam odit quidem eos accusantium amet obcaecati esse, ullam voluptatum maxime ipsam voluptatem in eum. Repellat voluptates molestias id ullam. Fuga ab cupiditate nulla eum placeat necessitatibus minus odio voluptatem.</p>
                     </div>
-                </div>
-                <div class="col-sm-4 align-items-end">
-                    <a href="underPages/index2.html">
-                    <h1>Lorem ipsum dolor.</h1>
-                    <div class="blackDiv">
-                        <p>   d impedit officiis illum et quidem dolorum, repellat iusto totam qui architecto. Eos qui quos inventore officia culpa.</p>
-                        opis odsyłacza
-                    
-                    </div>
-                    </a>
-                </div>
+                </div>                
             </div>
                 <div class="row">
-                    <div class="col-sm-6" >
-                        <a href="index.html">
-                        <h1 id="previous">poprzednia Strona...</h1>
-                        </a>
+                    <div class="col-sm-6">
+                        <h1>ciekawe</h1>
                         <div class="blackDiv">
                             <p>   d impedit officiis illum et quidem dolorum, repellat iusto totam qui architecto. Eos qui quos inventore officia culpa.</p>
                         </div>
                     </div>
-                    <div class="col-sm-6" id="next">
-                        <a href="index2.html">
-                        <h1>nastepna Strona...</h1>
-                        </a>
+                    <div class="col-sm-6">
+                        <h1>ciekawe</h1>
                         <div class="blackDiv">
                             <p>   d impedit officiis illum et quidem dolorum, repellat iusto totam qui architecto. Eos qui quos inventore officia culpa.</p>
                         </div>
