--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         
     </head>
     <body>
-       <div class="licznik" id="counter1">1</div>
+       <div class="licznik" id="counter">1</div>
         <div class="container">
             <div class="row justify-content-around">
                 <div class="col-sm-4 align-items-end">
