--- a/index.html
+++ b/index.html
@@ -58,8 +58,25 @@
                             <p>   d impedit officiis illum et quidem dolorum, repellat iusto totam qui architecto. Eos qui quos inventore officia culpa.</p>
                         </div>
                     </div>
-                </div>                  
+                </div>
+                                                              
             </div>
+            <div class="container-fluid">
+                <div class="row">
+                   <div class="row">
+                    <div class="col">
+                        <img src="image/mojezdjecie.bmp" class="img-fluid" alt="Responsive image">
+                    </div>
+                    <div class="col-4">
+                        <img src="image/mojezdjecie.bmp" class="rounded-circle img-fluid">
+                    </div>
+                    <!--<div class="w-100"></div>-->
+                    <div class="col-4">
+                        <img src="image/mojezdjecie.bmp" class="rounded-circle img-fluid">
+                    </div>            
+                    </div>
+                </div>
+                </div>      
         
 
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
