delete unnecessary div
:)

--- a/index.html
+++ b/index.html
@@ -130,7 +130,36 @@
                     </tr>
                 </tbody>
             </table>
-        </div>      
+        </div>
+        <table class="table table-condensed">
+        <thead>
+            <tr>
+                <th>[Title]</th>
+                <th>[Title]</th>
+                <th>[Title]</th>
+            </tr>
+        </thead>
+        <tfoot>
+            <tr>
+                <th>suma = </th>
+                <th>[Title]</th>
+                <th>[Title]</th>
+            </tr>        
+        </tfoot>
+        <tbody>
+            <tr>
+                <td>[data]</td>
+                <td>[data]</td>
+                <td>[data]</td>
+            </tr>
+            <tr>
+                <td>[data]</td>
+                <td>[data]</td>
+                <td>[data]</td>
+            </tr>
+        </tbody>
+    </table>
+      
 
 
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
