selektory pseudo klass
pseudo selektory

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
         <!-- Custom CSS -->
         <link rel="stylesheet" href="css/cssCustom.css">
+        <link rel="stylesheet" href="image/fontello-570ad081/css/animation.css">
     </head>
     <body>
         <div class="container">
@@ -20,13 +21,13 @@
                 <div class="col-sm-4">
                     <h1>Lorem ipsum dolor sit amet.</h1>
                     <div class="blackDiv">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi eaque ab labore, repellat, aliquid, soluta dolores quisquam consequatur unde explicabo omnis quia reprehenderit doloribus optio, quasi. Dolore quasi commodi obcaecati rerum, unde, aut quidem voluptatem distinctio voluptate maxime, deleniti dolores. Non architecto harum dolore error, esse dolorem tempora suscipit nulla voluptatibus ullam eligendi odit obcaecati incidunt consectetur illo nostrum cum!</p>
+                        <p class="duzoText">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi eaque ab labore, repellat, aliquid, soluta dolores quisquam consequatur unde explicabo omnis quia reprehenderit doloribus optio, quasi. Dolore quasi commodi obcaecati rerum, unde, aut quidem voluptatem distinctio voluptate maxime, deleniti dolores. Non architecto harum dolore error, esse dolorem tempora suscipit nulla voluptatibus ullam eligendi odit obcaecati incidunt consectetur illo nostrum cum!</p>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <h1>Lorem ipsum dolor sit.</h1>
                     <div class="blackDiv">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt recusandae voluptatum, dignissimos vero iusto rem consequatur atque sint? Quod distinctio vero iure molestias quidem odio dolore nostrum dolor dolorum, et, error accusantium deleniti laudantium eum animi, voluptatibus, sunt dignissimos. Rem, commodi quo a provident harum dolor pariatur voluptates deserunt nesciunt numquam odit quidem eos accusantium amet obcaecati esse, ullam voluptatum maxime ipsam voluptatem in eum. Repellat voluptates molestias id ullam. Fuga ab cupiditate nulla eum placeat necessitatibus minus odio voluptatem.</p>
+                        <p class="duzoText">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt recusandae voluptatum, dignissimos vero iusto rem consequatur atque sint? Quod distinctio vero iure molestias quidem odio dolore nostrum dolor dolorum, et, error accusantium deleniti laudantium eum animi, voluptatibus, sunt dignissimos. Rem, commodi quo a provident harum dolor pariatur voluptates deserunt nesciunt numquam odit quidem eos accusantium amet obcaecati esse, ullam voluptatum maxime ipsam voluptatem in eum. Repellat voluptates molestias id ullam. Fuga ab cupiditate nulla eum placeat necessitatibus minus odio voluptatem.</p>
                     </div>
                 </div>
                 <div class="col-sm-4">
